@@ -59,10 +59,10 @@ public class GeneratorModule extends FaradayModule {
     private static final double PICKUP_COIL_DIRECTION = 0.0; // radians
     private static final double PICKUP_COIL_DISTANCE_EXPONENT = 2.0;
     private static final double PICKUP_COIL_FUDGE_FACTOR = 1.0;  // see PickupCoil.setFudgeFactor, 1 because magnet is never inside coil
-    private static final double LIGHTBULB_GLASS_MIN_ALPHA = 0.25;
+    private static final double LIGHTBULB_GLASS_MIN_ALPHA = 0.35;
     
     // Scaling -- values depend on the distance between pickup coil and turbine!
-    private static final double LIGHTBULB_GLOW_SCALE = 2.5;
+    private static final double LIGHTBULB_GLOW_SCALE = 15.0;
     private static final double LIGHTBULB_SCALE = 2.5;
     private static final double VOLTMETER_SCALE = 3.3;
     private static final double ELECTRON_SPEED_SCALE = 2.5;
