@@ -11,6 +11,7 @@ TODO:
 - convert model from Observer to Listener pattern
 
 DONE:
+4/1/08 - change lightbulb min alpha=0.35 and light glow scale=15 throughout [488]
 ********* version 1.05.08 (20467)
 3/31/08 - make Earth image smaller to match Kathy's mockup [443]
 3/31/08 - for bar magnet, make compass grid use B-field slightly outside magnet's 2D plan to prevent needles from flipping [424] 
